--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:27.1.1'
     compile 'com.android.support:design:27.1.1'
     implementation 'com.google.android.gms:play-services-auth:11.6.0'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.google.firebase:firebase-core:11.6.0'
+    compile 'com.google.firebase:firebase-auth:11.6.0'
 
 }
 
